# Agentic-Blogger

./: README.md  pyproject.toml
src/blog_ai/: crew.py  main.py
src/blog_ai/config/: agents.yaml  input.yaml  tasks.yaml
tests/: experiment.ipynb  report.md
