[project]
name = "blog_ai"
version = "0.1.0"
description = "blog_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
blog_ai = "blog_ai.main:run"
run_crew = "blog_ai.main:run"
train = "blog_ai.main:train"
replay = "blog_ai.main:replay"
test = "blog_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
